; ModuleID = '/home/carl/AnghaBench/qmk_firmware/drivers/qwiic/extr_micro_oled.c_clear_screen.c'
source_filename = "/home/carl/AnghaBench/qmk_firmware/drivers/qwiic/extr_micro_oled.c_clear_screen.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @clear_screen() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32, align 4
  store i32 0, i32* %1, align 4
  br label %3

3:                                                ; preds = %19, %0
  %4 = load i32, i32* %1, align 4
  %5 = icmp slt i32 %4, 8
  br i1 %5, label %6, label %22

6:                                                ; preds = %3
  %7 = load i32, i32* %1, align 4
  %8 = call i32 @set_page_address(i32 %7)
  %9 = call i32 @set_column_address(i32 0)
  store i32 0, i32* %2, align 4
  br label %10

10:                                               ; preds = %15, %6
  %11 = load i32, i32* %2, align 4
  %12 = icmp slt i32 %11, 128
  br i1 %12, label %13, label %18

13:                                               ; preds = %10
  %14 = call i32 @send_data(i32 0)
  br label %15

15:                                               ; preds = %13
  %16 = load i32, i32* %2, align 4
  %17 = add nsw i32 %16, 1
  store i32 %17, i32* %2, align 4
  br label %10

18:                                               ; preds = %10
  br label %19

19:                                               ; preds = %18
  %20 = load i32, i32* %1, align 4
  %21 = add nsw i32 %20, 1
  store i32 %21, i32* %1, align 4
  br label %3

22:                                               ; preds = %3
  ret void
}

declare dso_local i32 @set_page_address(i32) #1

declare dso_local i32 @set_column_address(i32) #1

declare dso_local i32 @send_data(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
